[tool.poetry]
name = "template-ai-chatbot-whatsapp"
version = "0.1.0"
description = ""
authors = ["Bruno <tsoares.bruno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
openai = "^1.37.0"
flask = "^3.0.3"
twilio = "^9.2.3"
pytest = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
